--- a/e-threader/dockerfile
+++ b/e-threader/dockerfile
@@ -2,7 +2,10 @@ FROM python:3-slim-buster
 
 ADD requirements.txt /opt/requirements.txt
 
-RUN pip install -r /opt/requirements.txt
+RUN apt-get update \
+    && apt-get install -y xdg-utils wget xz-utils \
+    && wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sh /dev/stdin \
+    && pip install -r /opt/requirements.txt
 
 # CMD ["./../godot", "--main-pack", "simple_server.pck", "-s"]
 CMD ["python", "/opt/e-threader/main.py"]
