--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,6 @@ Thumbs.db #thumbnail cache on Windows
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 .env
-db.sqlite
+*.sqlite
 *.epub
 *.mobi
